# Unified-MCP-Tool-Graph

./: .env.example  .gitattributes  .gitignore  ARCHITECTURE.md  ARCHITECTURE_AND_SAAS_PLAN.md  ARCHITECTURE_DIAGRAMS.md  ARCHITECTURE_RESEARCH_INDEX.md  Aws_Mcp_servers.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  EXECUTIVE_SUMMARY.md  GETTING_STARTED.md  ISSUES_AND_IMPROVEMENTS.md  KNOWLEDGE_GRAPH_MCP_INTEGRATION_RESULTS.md  LICENSE  MCP_RESEARCH_FINDINGS.md  MCP_SERVER_STATUS.md  Mcp.json  PROJECT_COMPLETION_SUMMARY.md  README.md  UNIFIED_GATEWAY_README.md  docker-compose.yml  docker-entrypoint.sh  env.example  main.py  mcp_server_manager.py  package-lock.json  package.json  pyproject.toml  requirements.txt  run_end_to_end_test.py  smithery_servers_with_tools.json  start_gateway.sh  start_unified_gateway.py  test_comprehensive_mcp.py  test_knowledge_graph_mcp_integration.py  test_mcp_streamable_http_client.py  test_mock_knowledge_graph_integration.py  test_working_mcp_server.py  (+4 more)
Adk_Agent/: agent.py
Data/: README.md
Dynamic_tool_retriever_MCP/: README.md  embedder.py  neo4j_retriever.py  server.py
Example_Agents/: README.md  test_a2a_client.py
Example_Use/: MCP_client.py  get_MCP_config.py
Ingestion_pipeline/: Ingestion_Neo4j.py  Preprocess_parse_and_embed.py  README.md  cluster_vendors_ingestion.py  cluster_vendors_usecase.py  disable_tools.py  enable_tools.py  multi_label_vendors.json
MCP_Server_Manager/: mcp_client_config.json  mcp_proxy_servers.json  mcp_server_manager.py  test_mcp_multi_server_client.py
Retriver_A2A_Agent/: agent.py
(+92 files in other folders)
